# Sponzey-Edge

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PROJECT.md  README.ko.md  README.md  docker-compose.yml
.github/workflows/: build-binaries.yml
apps/admin-web/: README.md  app.js  index.html  styles.css
apps/edge-proxy/: Cargo.toml
apps/edge-proxy/src/: admin_http.rs  bootstrap.rs  health_runtime.rs  main.rs  process_mode.rs
crates/edge-adapters/: Cargo.toml
crates/edge-adapters/src/: audit_ledger.rs  backup.rs  lib.rs
crates/edge-admin-api/: Cargo.toml
crates/edge-admin-api/src/: lib.rs
crates/edge-application/: Cargo.toml
crates/edge-application/src/: audit.rs  backup.rs  drain.rs  failure_observability.rs  health.rs  lib.rs  metrics.rs  passive_health.rs  resource_observability.rs  trust.rs  upstream_tls.rs
crates/edge-core/: Cargo.toml
crates/edge-core/src/: lib.rs
crates/edge-domain/: Cargo.toml
crates/edge-domain/src/: audit.rs  backup.rs  lib.rs
crates/edge-domain/src/backup/: model.rs
crates/edge-ports/: Cargo.toml
crates/edge-ports/src/: lib.rs
docs/: acme-staging.md  admin-api.md  admin-curl.md  architecture.md  backup-restore.md  config-schema.md  current-state.md  dependencies.md  deployment.md  failure-aware-routing.md  install.md  memory-resource-baseline.md  mvp-completion-audit.md  n8n-gateway.md  nginx-migration.md  observability.md  private-pki-testing.md  release-evidence-template.md  release-gate.md  threat-model.md  tls-runtime-next.md  troubleshooting.md  upstream-health-architecture.md
docs/adr/: 007-production-metrics-boundary.md  008-backup-recovery-foundation.md  009-private-pki-bidirectional-trust.md  010-durable-audit-ledger.md  011-quantitative-memory-resource-safety.md
examples/: minimal.toml  n8n-gateway.compose.yml
tests/integration/: Cargo.toml
tests/integration/tests/: config_lifecycle_smoke.rs  foundation_smoke.rs
tests/memory-harness/: Cargo.toml
tests/memory-harness/src/: admission_probe.rs  admission_probe_main.rs  bounded_net.rs  canonical_slow_profile.rs  connection_churn.rs  connection_churn_cli.rs  connection_churn_evidence.rs  connection_churn_main.rs  connection_holder.rs  connection_holder_main.rs  control_max.rs  control_max_main.rs  diagnostic_soak.rs  diagnostic_soak_main.rs  diagnostic_soak_runner.rs  diagnostic_soak_runner_cli.rs  diagnostic_soak_runner_main.rs  evaluator.rs  evidence_cli.rs  evidence_main.rs  full_profile_readiness.rs  full_profile_readiness_main.rs  full_profile_runner.rs  full_profile_runner_main.rs  http_driver.rs  http_evidence.rs  http_evidence_cli.rs  http_evidence_main.rs  http_steady.rs  http_steady_main.rs  https_steady.rs  https_steady_main.rs  lib.rs  macos_leaks.rs  macos_leaks_cli.rs  macos_leaks_main.rs  main.rs  memory_aggregate.rs  memory_aggregate_main.rs  memory_manifest.rs  (+41 more)
tests/memory-harness/tests/: admission_probe.rs  baseline_contract.rs  canonical_slow_profile.rs  connection_churn.rs  connection_churn_evidence.rs  connection_holder.rs  control_max.rs  control_max_cli.rs  diagnostic_soak.rs  diagnostic_soak_runner.rs  diagnostic_soak_runner_cli.rs  evaluator_contract.rs  evidence_cli.rs  full_profile_readiness.rs  full_profile_runner.rs  harness_foundation.rs  http_driver.rs  http_evidence_contract.rs  http_steady.rs  https_steady.rs  macos_leaks.rs  macos_leaks_cli.rs  memory_aggregate.rs  memory_manifest.rs  mtls_connection_holder.rs  mtls_steady.rs  payload_pressure.rs  phase011_memory_release.rs  phase011_memory_release_cli.rs  private_https.rs  release_http_scenario.rs  report_contract.rs  slow_body_cycles.rs  slow_body_driver.rs  slow_header_cycles.rs  slow_header_driver.rs  slow_response_cycles.rs  slow_response_driver.rs  soak_window.rs  system_adapters.rs  (+3 more)
