[package]
name = "edge-adapters"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
age = { version = "0.12.1", default-features = false }
edge-application = { path = "../edge-application" }
edge-domain = { path = "../edge-domain" }
edge-ports = { path = "../edge-ports" }
fs4 = "1.1.0"
getrandom = "0.3.4"
instant-acme = { version = "0.8.5", default-features = false, features = ["ring", "hyper-rustls", "rcgen"] }
rustls = { version = "0.23.41", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1.15.0"
sha2 = "0.10.9"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48.0", default-features = false, features = ["rt", "time", "net"] }
x509-parser = { version = "0.18.1", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
rcgen = "0.14.8"

[lib]
path = "src/lib.rs"
