[package]
name = "edge-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
edge-application = { path = "../edge-application" }
edge-domain = { path = "../edge-domain" }
edge-ports = { path = "../edge-ports" }
mio = { version = "1.0", features = ["os-poll", "net"] }

[dev-dependencies]
edge-adapters = { path = "../edge-adapters" }

[lib]
path = "src/lib.rs"
