[package]
name = "edge-integration-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
edge-adapters = { path = "../../crates/edge-adapters" }
edge-admin-api = { path = "../../crates/edge-admin-api" }
edge-application = { path = "../../crates/edge-application" }
edge-core = { path = "../../crates/edge-core" }
edge-domain = { path = "../../crates/edge-domain" }
edge-ports = { path = "../../crates/edge-ports" }
